# Data-Dynamo

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  requirement.txt
backend/: Dockerfile  backup.html  database.sqlite  main.py  main2.py  main3.py  pyproject.toml
backend/src/data_dynamo/: main.py
frontend/: backup.html  backup_2.html  backup_3.html  index.html  script.js  style.css
